--- a/cigionline/static/themes/big_tech_s3/css/big_tech_s3.scss
+++ b/cigionline/static/themes/big_tech_s3/css/big_tech_s3.scss
@@ -63,10 +63,13 @@ $bigtech-light-grey: #b1b1b1;
   }
 
   .big-tech-hero {
+    @include media-breakpoint-up(sm) {
+      padding-top: 2.2em;
+    }
     background-image: url('../../../assets/bigtech_s3_background.png');
     background-position: top;
     margin-bottom: 3em;
-    padding-top: 2.2em;
+    padding-top: 2.7em;
   }
 
   .body {
